Refactor: changed getFirst() to get(0) due to runtime errors